# hireagent

./: .gitignore  LICENSE  README.md  profile.example.json  pyproject.toml
src/hireagent/: __init__.py  __main__.py  cli.py  config.py  database.py  eligibility.py  latex_renderer.py  llm.py  local_llm.py  pipeline.py  resume_rotation.py  telegram_bot.py  view.py
src/hireagent/apply/: chrome.py  dashboard.py  free_agent.py  launcher.py  playwright_apply.py  prompt.py  vision_loop.py
src/hireagent/config/: employers.yaml  searches.example.yaml  sites.yaml
src/hireagent/discovery/: jobspy.py  otto.py  scoutbetter.py  smartextract.py  wellfound.py  workatastartup.py  workday.py
src/hireagent/enrichment/: detail.py
src/hireagent/scoring/: cover_letter.py  pdf.py  scorer.py  tailor.py  validator.py
src/hireagent/templates/: fixed_resume.tex  resume_template.tex
src/hireagent/wizard/: init.py
