[project]
name = "hireagent"
version = "1.0.0"
description = "AI-powered job discovery, resume tailoring, and application pipeline for entry-level software engineers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Gunakarthik Naidu Lanka", email = "gunakarthiknaidu@gmail.com"}]
keywords = ["job-search", "ai-agent", "resume", "agentic", "career", "playwright", "llm", "nvidia", "ollama", "h1b", "job-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "httpx>=0.24",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    ]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
hireagent = "hireagent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hireagent"]

[tool.hatch.build]
artifacts = ["src/hireagent/config/*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 120
